--- a/Group Project/zengarden/partials/_small.scss
+++ b/Group Project/zengarden/partials/_small.scss
@@ -3,13 +3,11 @@ html{
     display: grid;
     background-color: $color-7;
     color: $color-8;
-    width: 100vw;
     overflow-x: hidden;
 }
 
 body {
     grid-row-gap: 1.2vw;
-//    grid-auto-flow: column;
 }
 
 a{
@@ -21,10 +19,7 @@ a{
 header{
     margin-top: -50px;
     padding: 0 $padding-mobile;
-
-    h1, h2, p{
-        text-align: center;
-    }
+    text-align: center;
 
     h2 {
         margin-bottom: 0px;
@@ -38,7 +33,9 @@ header{
 .intro header, .intro .summary {
     text-align: center;
     width: 100%;
-
+    h1 {
+      margin-left: -50px;
+    }
 
     p:first-of-type {
         z-index: 3;
@@ -51,6 +48,7 @@ s
 #zen-preamble.preamble, .summary {
     z-index: 10;
     position: relative;
+    margin-left: 10px;
     padding-left: $padding-full !important;
     padding-right: $padding-full !important;
     text-align: center;
@@ -61,23 +59,31 @@ s
 }
 
 #zen-intro {
-  padding-left: 24px;
-  padding-right: 24px;
+  padding-left: 45px;
+  padding-right: 45px;
 }
+
 .main > div, .preamble, aside {
     margin: 2vw;
-    padding: 0 $padding-mobile 20px $padding-mobile;
+    padding: 20px $padding-mobile 20px $padding-mobile;
 
 }
 
 section {
-  margin-left: -40px;
-  width: $body-width;
+  margin-left: -8%;
+  p {
+  padding-left: 5%;
+  padding-right: 5%;
+  width: 80%;
+  }
+  &:before {
+    z-index: 14;
+  }
+  &:before, &:after {
+    margin-left: -40px;
+  }
 }
 
-section:before {
-  z-index: 14;
-}
 
 /* ASIDE */
 aside {
@@ -93,40 +99,38 @@ aside {
     transition: .5s ease-in-out;
     margin: 0px;
     width: 300px;
+
+    &:hover {
+     right: 0px;
+    }
+
+    &:hover:after {
+      background-image: url(./assets/aside-arrow-right.png);
+    }
+
+    &:after {
+        z-index: 10;
+        background-color: #460942;
+        background-image: url(./assets/aside-arrow-left.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        content: "";
+        height: 60px;
+        right: 330px;
+        position: absolute;
+        top: 130px;
+        width: 45px;
+        border-left: 1px solid white;
+        border-radius: 5px;
+        transition: .5s ease-in-out;
+      }
+
+      a {
+        color: $color-5;
+      }
 }
 
-aside:hover {
- right: 0px;
-}
 
-aside:hover:after {
-  background-image: url(./assets/aside-arrow-right.png);
-}
-
-aside:after {
-    z-index: 10;
-    background-color: #460942;
-    background-image: url(./assets/aside-arrow-left.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    content: "";
-    height: 60px;
-    right: 330px;
-    position: absolute;
-    top: 130px;
-    width: 45px;
-    border-left: 1px solid white;
-    border-radius: 5px;
-    transition: .5s ease-in-out;
-  }
-
-aside a {
-  color: #ffffffa5;
-}
-
-aside a {
-  color: $color-5;
-}
 
 p {
     z-index: 3;
